src/main/java/org/trad/pcl/Parser/Parser.java
package org.trad.pcl.Parser;

import org.trad.pcl.Exceptions.Syntax.MissingSemicolonException;
import org.trad.pcl.Exceptions.Syntax.UnexpectedTokenException;
import org.trad.pcl.Exceptions.Syntax.UnexpectedTokenListException;
import org.trad.pcl.Helpers.OperatorEnum;
import org.trad.pcl.Helpers.ParameterMode;
import org.trad.pcl.Helpers.TagHelper;
import org.trad.pcl.Lexer.Lexer;
import org.trad.pcl.Lexer.Tokens.Tag;
import org.trad.pcl.Lexer.Tokens.Token;
import org.trad.pcl.Services.ErrorService;
import org.trad.pcl.annotation.PrintMethodName;
import org.trad.pcl.ast.OperatorNode;
import org.trad.pcl.ast.ParameterNode;
import org.trad.pcl.ast.ProgramNode;
import org.trad.pcl.ast.declaration.*;
import org.trad.pcl.ast.expression.*;
import org.trad.pcl.ast.statement.*;
import org.trad.pcl.ast.type.AccessTypeNode;
import org.trad.pcl.ast.type.RecordTypeNode;
import org.trad.pcl.ast.type.TypeNode;

import java.util.ArrayList;
import java.util.List;

public class Parser {
    private final ErrorService errorService;
    Lexer lexer;
    private Token currentToken;

    public Parser(Lexer lexer) {
        this.lexer = lexer;
        this.errorService = ErrorService.getInstance();
        this.currentToken = lexer.nextToken();
    }

    public ProgramNode parse() {
        return fichier();
    }

    @PrintMethodName
    private ProgramNode fichier() {
        ProgramNode abstractSyntaxTreeRoot = new ProgramNode();

        analyseTerminal(Tag.WITH);
        analyseTerminal(Tag.IDENT);
        analyseTerminal(Tag.DOT);
        analyseTerminal(Tag.IDENT);
        analyseTerminal(Tag.SEMICOLON);
        analyseTerminal(Tag.USE);
        analyseTerminal(Tag.IDENT);
        analyseTerminal(Tag.DOT);
        analyseTerminal(Tag.IDENT);
        analyseTerminal(Tag.SEMICOLON);
        analyseTerminal(Tag.PROCEDURE);
        ProcedureDeclarationNode rootProcedure = new ProcedureDeclarationNode();
        rootProcedure.setIdentifier(analyseTerminal(Tag.IDENT).getValue());
        analyseTerminal(Tag.IS);
        BlockNode block = new BlockNode();
        block.addDeclarations(multipleDeclarations());
        analyseTerminal(Tag.BEGIN);
        block.addStatements(multipleStatements());
        rootProcedure.setBody(block);
        abstractSyntaxTreeRoot.setRootProcedure(rootProcedure);
        analyseTerminal(Tag.END);
        hasident();
        analyseTerminal(Tag.SEMICOLON);
        analyseTerminal(Tag.EOF);

        return abstractSyntaxTreeRoot;
    }

    /**
     * Grammar rule : decl
     */
    @PrintMethodName
    public List<DeclarationNode> declaration() {
        List<DeclarationNode> declarations = new ArrayList<>();
        switch (this.currentToken.tag()) {
            case PROCEDURE -> {
                ProcedureDeclarationNode declaration = new ProcedureDeclarationNode();
                declarations.add(declaration);
                analyseTerminal(Tag.PROCEDURE);
                declaration.setIdentifier(analyseTerminal(Tag.IDENT).getValue());
                declaration.addParameters(hasParameters());
                analyseTerminal(Tag.IS);
                BlockNode block = new BlockNode();
                block.addDeclarations(multipleDeclarations());
                analyseTerminal(Tag.BEGIN);
                block.addStatements(multipleStatements());
                declaration.setBody(block);
                analyseTerminal(Tag.END);
                // TODO
                hasident();
                analyseTerminal(Tag.SEMICOLON);
            }
            case IDENT -> {
                //declaration.setName(this.currentToken.getValue());
                List<String> idents = multipleIdent();
                analyseTerminal(Tag.COLON);
                TypeNode typeNode = type();

                ExpressionNode assignNode = assignDeclarationExpression();
                for (String ident : idents) {
                    VariableDeclarationNode variableDeclarationNode = new VariableDeclarationNode();
                    variableDeclarationNode.setIdentifier(ident);
                    variableDeclarationNode.setType(typeNode);
                    if (assignNode != null) {
                        AssignmentStatementNode assignmentStatementNode = new AssignmentStatementNode();
                        assignmentStatementNode.setIdentifier(variableDeclarationNode.getIdentifier());
                        assignmentStatementNode.setExpression(assignNode);
                        variableDeclarationNode.setAssignment(assignmentStatementNode);
                    }
                    declarations.add(variableDeclarationNode);
                }
                analyseTerminal(Tag.SEMICOLON);
            }
            case TYPE -> {
                TypeDeclarationNode declaration = new TypeDeclarationNode();
                declarations.add(declaration);
                analyseTerminal(Tag.TYPE);
                String ident = analyseTerminal(Tag.IDENT).getValue();
                TypeNode type = isAccessOrRecord();
                type.setIdentifier(ident);
                declaration.setType(type);
                analyseTerminal(Tag.SEMICOLON);
            }
            case FUNCTION -> {
                FunctionDeclarationNode declaration = new FunctionDeclarationNode();
                declarations.add(declaration);
                analyseTerminal(Tag.FUNCTION);
                declaration.setIdentifier(analyseTerminal(Tag.IDENT).getValue());
                declaration.addParameters(hasParameters());
                analyseTerminal(Tag.RETURN);
                declaration.setReturnType(type());
                analyseTerminal(Tag.IS);
                BlockNode block = new BlockNode();
                block.addDeclarations(multipleDeclarations());
                analyseTerminal(Tag.BEGIN);
                block.addStatements(multipleStatements());
                declaration.setBody(block);
                analyseTerminal(Tag.END);
                // TODO
                hasident();
                analyseTerminal(Tag.SEMICOLON);
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.PROCEDURE, this.currentToken),
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken),
                            Token.generateExpectedToken(Tag.TYPE, this.currentToken),
                            Token.generateExpectedToken(Tag.FUNCTION, this.currentToken))
            );
        }
        return declarations;
    }

    /**
     * Grammar rule : hasischoose
     */
    @PrintMethodName
    private TypeNode isAccessOrRecord() {
        TypeNode type = null;
        switch (this.currentToken.tag()) {
            case IS -> {
                analyseTerminal(Tag.IS);
                type = AccessOrRecord();
            }
            case SEMICOLON -> {
                type = new TypeNode();
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.IS, this.currentToken),
                            Token.generateExpectedToken(Tag.SEMICOLON, this.currentToken))
            );
        }
        return type;
    }


    /**
     * Grammar rule : accorrec
     */
    @PrintMethodName
    private TypeNode AccessOrRecord() {
        TypeNode type = null;
        switch (this.currentToken.tag()) {
            case ACCESS -> {
                type = new AccessTypeNode();
                analyseTerminal(Tag.ACCESS);
                TypeNode simpleTypeNode = new TypeNode();
                simpleTypeNode.setIdentifier(analyseTerminal(Tag.IDENT).getValue());
                ((AccessTypeNode) type).setBaseType(simpleTypeNode);
            }
            case RECORD -> {
                type = new RecordTypeNode();
                analyseTerminal(Tag.RECORD);
                ((RecordTypeNode) type).addFields(multipleFields());
                analyseTerminal(Tag.END);
                analyseTerminal(Tag.RECORD);
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.ACCESS, this.currentToken),
                            Token.generateExpectedToken(Tag.RECORD, this.currentToken))
            );
        }
        return type;
    }

    /**
     * Grammar rule : decls
     */
    @PrintMethodName
    private List<DeclarationNode> multipleDeclarations() {
        List<DeclarationNode> declarations = new ArrayList<>();
        switch (this.currentToken.tag()) {
            case PROCEDURE, IDENT, TYPE, FUNCTION -> {
                declarations.addAll(declaration());
                declarations.addAll(multipleDeclarations());
            }
            case BEGIN -> {
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.PROCEDURE, this.currentToken),
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken),
                            Token.generateExpectedToken(Tag.TYPE, this.currentToken),
                            Token.generateExpectedToken(Tag.FUNCTION, this.currentToken),
                            Token.generateExpectedToken(Tag.BEGIN, this.currentToken))
            );
        }
        return declarations;
    }

    @PrintMethodName
    private void hasident() {
        switch (this.currentToken.tag()) {
            case SEMICOLON -> {
            }
            case IDENT -> analyseTerminal(Tag.IDENT);
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.SEMICOLON, this.currentToken),
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken))
            );
        }
    }

    /**
     * Grammar rule : identsep
     */
    @PrintMethodName
    private List<String> multipleIdent() {
        List<String> identifiers = new ArrayList<>();
        if (this.currentToken.tag() == Tag.IDENT) {
            identifiers.add(analyseTerminal(Tag.IDENT).getValue());
            identifiers.addAll(identSeparator());
        } else {
            this.errorService.registerSyntaxError(new UnexpectedTokenException(Token.generateExpectedToken(Tag.IDENT, this.currentToken), this.currentToken));
        }
        return identifiers;
    }

    /**
     * Grammar rule : identsep2
     */
    @PrintMethodName
    private List<String> identSeparator() {
        List<String> declarations = new ArrayList<>();
        switch (this.currentToken.tag()) {
            case COLON -> {
            }
            case COMMA -> {
                analyseTerminal(Tag.COMMA);
                declarations.addAll(multipleIdent());
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.COLON, this.currentToken),
                            Token.generateExpectedToken(Tag.COMMA, this.currentToken))
            );
        }
        return declarations;
    }

    /**
     * Grammar rule : champ
     */
    @PrintMethodName
    private List<VariableDeclarationNode> field() {
        List<VariableDeclarationNode> declarations = new ArrayList<>();
        if (this.currentToken.tag() == Tag.IDENT) {
            List<String> idents =  multipleIdent();
            analyseTerminal(Tag.COLON);
            TypeNode type = type();
            for (String ident : idents) {
                VariableDeclarationNode declaration = new VariableDeclarationNode();
                declaration.setIdentifier(ident);
                declaration.setType(type);
                declarations.add(declaration);
            }
            analyseTerminal(Tag.SEMICOLON);
        } else {
            this.errorService.registerSyntaxError(new UnexpectedTokenException(Token.generateExpectedToken(Tag.IDENT, this.currentToken), this.currentToken));
        }
        return declarations;
    }

    /**
     * Grammar rule : champs
     */
    @PrintMethodName
    private List<VariableDeclarationNode> multipleFields() {
        List<VariableDeclarationNode> declarations = new ArrayList<>();
        if (this.currentToken.tag() == Tag.IDENT) {
            declarations.addAll(field());
            declarations.addAll(fieldsSeparator());
        } else {
            this.errorService.registerSyntaxError(new UnexpectedTokenException(Token.generateExpectedToken(Tag.IDENT, this.currentToken), this.currentToken));
        }
        return declarations;
    }

    /**
     * Grammar rule : champs2
     */
    @PrintMethodName
    private List<VariableDeclarationNode> fieldsSeparator() {
        List<VariableDeclarationNode> declarations = new ArrayList<>();
        switch (this.currentToken.tag()) {
            case IDENT -> declarations.addAll(multipleFields());
            case END -> {
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken),
                            Token.generateExpectedToken(Tag.END, this.currentToken))
            );
        }
        return declarations;
    }

    /**
     * Grammar rule : type_n
     */
    @PrintMethodName
    private TypeNode type() {
        TypeNode type = null;
        switch (this.currentToken.tag()) {
            case ACCESS -> {
                analyseTerminal(Tag.ACCESS);
                type = new AccessTypeNode();
                TypeNode simpleTypeNode = new TypeNode();
                simpleTypeNode.setIdentifier(analyseTerminal(Tag.IDENT).getValue());
                ((AccessTypeNode) type).setBaseType(simpleTypeNode);
            }
            case IDENT -> {
                type = new TypeNode();
                ((TypeNode) type).setIdentifier(analyseTerminal(Tag.IDENT).getValue());
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.ACCESS, this.currentToken),
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken))
            );
        }
        return type;
    }

    /**
     * Grammar rule : params
     */
    @PrintMethodName
    private List<ParameterNode> functionParameters() {
        List<ParameterNode> parameters = new ArrayList<>();
        if (this.currentToken.tag() == Tag.OPEN_PAREN) {
            analyseTerminal(Tag.OPEN_PAREN);
            parameters.addAll(multipleParameters());
            analyseTerminal(Tag.CLOSE_PAREN);
        } else {
            this.errorService.registerSyntaxError(new UnexpectedTokenException(Token.generateExpectedToken(Tag.OPEN_PAREN, this.currentToken), this.currentToken));
        }
        return parameters;
    }

    /**
     * Grammar rule : hasparams
     */
    @PrintMethodName
    private List<ParameterNode> hasParameters() {
        List<ParameterNode> parameters = new ArrayList<>();
        switch (this.currentToken.tag()) {
            case IS, RETURN -> {
            }
            case OPEN_PAREN -> parameters.addAll(functionParameters());
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.IS, this.currentToken),
                            Token.generateExpectedToken(Tag.RETURN, this.currentToken),
                            Token.generateExpectedToken(Tag.OPEN_PAREN, this.currentToken))
            );
        }
        return parameters;
    }

    /**
     * Grammar rule : paramsep
     */

    @PrintMethodName
    private List<ParameterNode> multipleParameters() {
        List<ParameterNode> parameters = new ArrayList<>();
        if (this.currentToken.tag() == Tag.IDENT) {
            parameters.addAll(parameter());
            parameters.addAll(paramSeparator());
        } else {
            this.errorService.registerSyntaxError(new UnexpectedTokenException(Token.generateExpectedToken(Tag.IDENT, this.currentToken), this.currentToken));
        }
        return parameters;
    }


    /**
     * Grammar rule : paramsep2
     */
    @PrintMethodName
    private List<ParameterNode> paramSeparator() {
        List<ParameterNode> parameters = new ArrayList<>();
        switch (this.currentToken.tag()) {
            case SEMICOLON -> {
                analyseTerminal(Tag.SEMICOLON);
                parameters.addAll(multipleParameters());
            }
            case CLOSE_PAREN -> {
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.SEMICOLON, this.currentToken),
                            Token.generateExpectedToken(Tag.CLOSE_PAREN, this.currentToken))
            );
        }
        return parameters;
    }

    /**
     * Grammar rule : typexpr
     */
    @PrintMethodName
    private ExpressionNode assignDeclarationExpression() {
        ExpressionNode expression = null;
        switch (this.currentToken.tag()) {
            case ASSIGN -> {
                analyseTerminal(Tag.ASSIGN);
                expression = expression();
            }
            case SEMICOLON -> {
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.ASSIGN, this.currentToken),
                            Token.generateExpectedToken(Tag.SEMICOLON, this.currentToken))
            );
        }
        return expression;
    }

    /**
     * Grammar rule : param
     */
    @PrintMethodName
    private List<ParameterNode> parameter() {
        List<ParameterNode> parameters = new ArrayList<>();
        if (this.currentToken.tag() == Tag.IDENT) {
            List<String> idents = multipleIdent();
            analyseTerminal(Tag.COLON);
            ParameterMode mode = mode();
            TypeNode type = type();
            for (String ident : idents) {
                ParameterNode parameter = new ParameterNode();
                parameter.setIdentifier(ident);
                parameter.setMode(mode);
                parameter.setType(type);
                parameters.add(parameter);
            }
        } else {
            this.errorService.registerSyntaxError(new UnexpectedTokenException(new Token(Tag.IDENT, this.currentToken.line(), TagHelper.getTagString(Tag.IDENT)), this.currentToken));
        }
        return parameters;
    }

    @PrintMethodName
    private ParameterMode mode() {
        ParameterMode mode = null;
        switch (this.currentToken.tag()) {
            case IDENT, ACCESS -> {
            }
            case IN -> {
                analyseTerminal(Tag.IN);
                mode = modeout();
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.IN, this.currentToken),
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken),
                            Token.generateExpectedToken(Tag.ACCESS, this.currentToken))
            );

        }
        return mode;
    }

    @PrintMethodName
    private ParameterMode modeout() {
        ParameterMode mode = null;
        switch (this.currentToken.tag()) {
            case IDENT, ACCESS -> {
            }
            case OUT -> {
                analyseTerminal(Tag.OUT);
                mode = ParameterMode.INOUT;
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.OUT, this.currentToken),
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken),
                            Token.generateExpectedToken(Tag.ACCESS, this.currentToken))
            );
        }
        return mode;
    }

    /**
     * Grammar rule : expr
     */
    @PrintMethodName
    private ExpressionNode expression() {
        switch (this.currentToken.tag()) {
            case IDENT, MINUS, OPEN_PAREN, DOT, ENTIER, CARACTERE, TRUE, FALSE, NULL, NEW, CHARACTER, NOT -> {
                return LeftOrExpression();
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken),
                            Token.generateExpectedToken(Tag.MINUS, this.currentToken),
                            Token.generateExpectedToken(Tag.OPEN_PAREN, this.currentToken),
                            Token.generateExpectedToken(Tag.DOT, this.currentToken),
                            Token.generateExpectedToken(Tag.ENTIER, this.currentToken),
                            Token.generateExpectedToken(Tag.CARACTERE, this.currentToken),
                            Token.generateExpectedToken(Tag.TRUE, this.currentToken),
                            Token.generateExpectedToken(Tag.FALSE, this.currentToken),
                            Token.generateExpectedToken(Tag.NULL, this.currentToken),
                            Token.generateExpectedToken(Tag.NEW, this.currentToken),
                            Token.generateExpectedToken(Tag.CHARACTER, this.currentToken),
                            Token.generateExpectedToken(Tag.NOT, this.currentToken))
            );

        }
        return null;
    }

    /**
     * Grammar rule : or_expr
     */
    @PrintMethodName
    private ExpressionNode LeftOrExpression() {
        switch (this.currentToken.tag()) {
            case IDENT, MINUS, OPEN_PAREN, DOT, ENTIER, CARACTERE, TRUE, FALSE, NULL, NEW, CHARACTER, NOT -> {
                ExpressionNode firstExpression = LeftAndExpression();
                BinaryExpressionNode secondExpression = OrExpression();
                if (secondExpression != null) {
                    secondExpression.setMostLeft(firstExpression);
                    return secondExpression;
                } else {
                    return firstExpression;
                }
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken),
                            Token.generateExpectedToken(Tag.MINUS, this.currentToken),
                            Token.generateExpectedToken(Tag.OPEN_PAREN, this.currentToken),
                            Token.generateExpectedToken(Tag.DOT, this.currentToken),
                            Token.generateExpectedToken(Tag.ENTIER, this.currentToken),
                            Token.generateExpectedToken(Tag.CARACTERE, this.currentToken),
                            Token.generateExpectedToken(Tag.TRUE, this.currentToken),
                            Token.generateExpectedToken(Tag.FALSE, this.currentToken),
                            Token.generateExpectedToken(Tag.NULL, this.currentToken),
                            Token.generateExpectedToken(Tag.NEW, this.currentToken),
                            Token.generateExpectedToken(Tag.CHARACTER, this.currentToken),
                            Token.generateExpectedToken(Tag.NOT, this.currentToken))
            );
        }
        return null;
    }

    /**
     * Grammar rule : or_expr2
     *
     * @return BinaryExpressionNode with operator and right expression
     * the left expression is set in LeftOrExpression
     */
    @PrintMethodName
    private BinaryExpressionNode OrExpression() {
        BinaryExpressionNode expression = null;
        switch (this.currentToken.tag()) {
            case SEMICOLON, COMMA, CLOSE_PAREN, THEN, DOTDOT, LOOP -> {
            }
            case OR -> {
                expression = new BinaryExpressionNode();

                OperatorNode operator = new OperatorNode();
                analyseTerminal(Tag.OR);
                operator.setOperator(OperatorEnum.OR);
                expression.setOperator(operator);

                ExpressionNode secondExpression = RightOrExpression();
                expression.setRight(secondExpression);

            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.OR, this.currentToken),
                            Token.generateExpectedToken(Tag.SEMICOLON, this.currentToken),
                            Token.generateExpectedToken(Tag.COMMA, this.currentToken),
                            Token.generateExpectedToken(Tag.CLOSE_PAREN, this.currentToken),
                            Token.generateExpectedToken(Tag.THEN, this.currentToken),
                            Token.generateExpectedToken(Tag.DOTDOT, this.currentToken),
                            Token.generateExpectedToken(Tag.LOOP, this.currentToken))
            );
        }
        return expression;
    }

    /**
     * Grammar rule : or_expr3
     */
    @PrintMethodName
    private ExpressionNode RightOrExpression() {
        BinaryExpressionNode expression = null;
        switch (this.currentToken.tag()) {
            case IDENT, OPEN_PAREN, DOT, MINUS, ENTIER, CARACTERE, TRUE, FALSE, NULL, NEW, CHARACTER, NOT -> {
                ExpressionNode firstExpression = LeftAndExpression();
                BinaryExpressionNode secondExpression = OrExpression();

                if (secondExpression != null) {
                    secondExpression.setMostLeft(firstExpression);
                    return secondExpression;
                } else {
                    return firstExpression;
                }
            }
            case ELSE -> {
                analyseTerminal(Tag.ELSE);
                expression = new BinaryExpressionNode();
                expression.setOperator(OperatorEnum.ORELSE);
                expression.setRight(LeftAndExpression(), OrExpression());
                return expression;
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken),
                            Token.generateExpectedToken(Tag.OPEN_PAREN, this.currentToken),
                            Token.generateExpectedToken(Tag.ELSE, this.currentToken),
                            Token.generateExpectedToken(Tag.DOT, this.currentToken),
                            Token.generateExpectedToken(Tag.MINUS, this.currentToken),
                            Token.generateExpectedToken(Tag.ENTIER, this.currentToken),
                            Token.generateExpectedToken(Tag.CARACTERE, this.currentToken),
                            Token.generateExpectedToken(Tag.TRUE, this.currentToken),
                            Token.generateExpectedToken(Tag.FALSE, this.currentToken),
                            Token.generateExpectedToken(Tag.NULL, this.currentToken),
                            Token.generateExpectedToken(Tag.NEW, this.currentToken),
                            Token.generateExpectedToken(Tag.CHARACTER, this.currentToken),
                            Token.generateExpectedToken(Tag.NOT, this.currentToken))
            );
        }
        return null;
    }

    /**
     * Grammar rule : and_expr
     */
    @PrintMethodName
    private ExpressionNode LeftAndExpression() {
        switch (this.currentToken.tag()) {
            case IDENT, OPEN_PAREN, MINUS, ENTIER, CARACTERE, TRUE, FALSE, NULL, NEW, CHARACTER, NOT -> {
                ExpressionNode firstExpression = NotExpression();
                System.out.println("firstExpression = " + firstExpression);
                BinaryExpressionNode secondExpression = AndExpression();
                System.out.println("secondExpression = " + secondExpression);

                if (secondExpression != null) {
                    secondExpression.setMostLeft(firstExpression);
                    System.out.println("secondExpression = " + secondExpression);
                    return secondExpression;
                } else {
                    return firstExpression;
                }
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken),
                            Token.generateExpectedToken(Tag.OPEN_PAREN, this.currentToken),
                            Token.generateExpectedToken(Tag.MINUS, this.currentToken),
                            Token.generateExpectedToken(Tag.ENTIER, this.currentToken),
                            Token.generateExpectedToken(Tag.CARACTERE, this.currentToken),
                            Token.generateExpectedToken(Tag.TRUE, this.currentToken),
                            Token.generateExpectedToken(Tag.FALSE, this.currentToken),
                            Token.generateExpectedToken(Tag.NULL, this.currentToken),
                            Token.generateExpectedToken(Tag.NEW, this.currentToken),
                            Token.generateExpectedToken(Tag.CHARACTER, this.currentToken),
                            Token.generateExpectedToken(Tag.NOT, this.currentToken))
            );
        }
        return null;
    }

    /**
     * Grammar rule : and_expr2
     *
     * @return BinaryExpressionNode with operator and right expression
     * the left expression is set in LeftAndExpression
     */
    @PrintMethodName
    private BinaryExpressionNode AndExpression() {
        BinaryExpressionNode expression = null;
        switch (this.currentToken.tag()) {
            case SEMICOLON, COMMA, CLOSE_PAREN, OR, THEN, DOTDOT, LOOP -> {
            }
            case AND -> {
                analyseTerminal(Tag.AND);
                return RightAndExpression();
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.AND, this.currentToken),
                            Token.generateExpectedToken(Tag.SEMICOLON, this.currentToken),
                            Token.generateExpectedToken(Tag.COMMA, this.currentToken),
                            Token.generateExpectedToken(Tag.CLOSE_PAREN, this.currentToken),
                            Token.generateExpectedToken(Tag.OR, this.currentToken),
                            Token.generateExpectedToken(Tag.THEN, this.currentToken),
                            Token.generateExpectedToken(Tag.DOTDOT, this.currentToken),
                            Token.generateExpectedToken(Tag.LOOP, this.currentToken))
            );
        }
        return expression;
    }

    /**
     * Grammar rule : and_expr3
     */
    @PrintMethodName
    private BinaryExpressionNode RightAndExpression() {
        BinaryExpressionNode expression = null;
        switch (this.currentToken.tag()) {
            case IDENT, OPEN_PAREN, MINUS, ENTIER, CARACTERE, TRUE, FALSE, NULL, NEW, CHARACTER, NOT -> {
                expression = new BinaryExpressionNode();
                expression.setOperator(OperatorEnum.AND);
                expression.setRight(NotExpression(), AndExpression());
                System.out.println("expression = " + expression);
            }
            case THEN -> {
                analyseTerminal(Tag.THEN);
                expression = new BinaryExpressionNode();
                expression.setOperator(OperatorEnum.ANDTHEN);
                expression.setRight(NotExpression(), AndExpression());
            }
            default -> this.errorService.registerSyntaxError(
                    new UnexpectedTokenListException(this.currentToken,
                            Token.generateExpectedToken(Tag.IDENT, this.currentToken),
                            Token.generateExpectedToken(Tag.OPEN_PAREN, this.currentToken),
                            Token.generateExpectedToken(Tag.MINUS, this.currentToken),
                            Token.generateExpectedToken(Tag.ENTIER, this.currentToken),
                            Token.generateExpectedToken(Tag.CARACTERE, this.currentToken),
                            Token.generateExpectedToken(Tag.TRUE, this.currentToken),
                            Token.generateExpectedToken(Tag.FALSE, this.currentToken),
                            Token.generateExpectedToken(Tag.NULL, this.currentToken),
                            Token.generateExpectedToken(Tag.NEW, this.currentToken),
                            Token.generateExpectedToken(Tag.CHARACTER, this.currentToken),
                            Token.generateExpectedToken(Tag.THEN, this.currentToken),
                            Token.generateExpectedToken(Tag.NOT, this.currentToken))
            );
        }
        return expression;
    }
